--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/incident-details-panel/incident-details-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/incident-details-panel/incident-details-panel.component.html
@@ -11,15 +11,15 @@
         <div class="field size-third">
           <mat-form-field class="item-full-width" appearance="standard" floatLabel="always">
             <mat-label class="label">Traditional Territory</mat-label>
-            <input matInput type="text" formControlName="traditionalTerritory">
+            <input matInput class="disabled-input" type="text" [(ngModel)]="incident.traditionalTerritory" formControlName="traditionalTerritory" disabled>
           </mat-form-field>
         </div>
         <div class="field size-third radio-checkbox-group">
             <mat-label id="fireOfNote">Wildfire Of Note</mat-label>
             <mat-icon class="fire-icon">local_fire_department</mat-icon>
             <mat-radio-group matInput aria-label="Wildfire of Note" formControlName="fireOfNote" [(ngModel)]="incident.fireOfNote">
-              <mat-radio-button value="N">No</mat-radio-button>
-              <mat-radio-button value="Y">Yes</mat-radio-button>
+              <mat-radio-button [value]="false">No</mat-radio-button>
+              <mat-radio-button [value]="true">Yes</mat-radio-button>
             </mat-radio-group>
         </div>
         <div class="field size-full">
@@ -41,6 +41,7 @@
               aria-label="Size Type"
               formControlName="sizeType"
               [options]="sizeTypeOptions"
+              [(ngModel)]="incident.sizeType"
               (valueChange)="setSizeTypeDisclaimer($event)">
                 <mat-option value="">
                   <span class="placeholder">Select...</span>
@@ -54,7 +55,7 @@
         <div class="field size-unset">
           <mat-form-field appearance="standard" floatLabel="always">
             <mat-label class="label">Size</mat-label>
-            <input matInput class="disabled-input" type="text" formControlName="sizeHectares" disabled>
+            <input matInput class="disabled-input" type="text" [(ngModel)]="incident.sizeHectares" formControlName="sizeHectares" disabled>
           </mat-form-field>
         </div>
         <div class="field size-full">
@@ -65,6 +66,7 @@
                 #autosize="cdkTextareaAutosize"
                 cdkAutosizeMinRows="1"
                 cdkAutosizeMaxRows="5"
+                [(ngModel)]="incident.sizeComments"
                 formControlName="sizeComments"></textarea>
           </mat-form-field>
         </div>
