Add go-back button

--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.html
@@ -1,4 +1,5 @@
 <div class="top">
+  <a class="link" routerLink="../admin" ><< Go Back</a>
   <div class="title">
     <div>
       <h1>Fire Number: <span *ngIf="currentAdminIncident">{{currentAdminIncident.incidentLabel}}</span><span [ngClass]="{'pub-chip': incident.publishedStatus.toLowerCase() === 'published', 'unpub-chip': incident.publishedStatus.toLowerCase() !== 'published'}">{{incident.publishedStatus}}</span></h1>
