Fix comms suitable checkbox display

--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/image-gallery-panel/image-gallery-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/image-gallery-panel/image-gallery-panel.component.html
@@ -4,7 +4,6 @@
     <button mat-button color="primary" class="primary-button" (click)="upload()">Upload Image</button>
   </div>
   <div class="image-gallery">
-    <!-- IsPrimary will be coming from published data? Not sure where this is going to go yet -->
-    <image-card-panel *ngFor="let image of attachments" [attachment]="image" [isPrimary]="false" [incident]="incident"></image-card-panel>
+    <image-card-panel *ngFor="let image of attachments" [attachment]="image" [incident]="incident"></image-card-panel>
   </div>
 </ng-container>
