Admin page updates (#434)
* Various small updates

* Fix comms suitable checkbox display

--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/image-gallery-panel/image-card-component/image-card-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/image-gallery-panel/image-card-component/image-card-panel.component.html
@@ -9,13 +9,13 @@
     <div class="row">Uploaded On: <strong>{{convertToDate(attachment.uploadedTimestamp)}}</strong></div>
     <div class="divider action"></div>
     <div class="action">
-      <mat-radio-button [value]="isPrimary" (change)="changePrimary()">Set as Primary Image</mat-radio-button>
+      <mat-radio-button (value)="isPrimary" (change)="changePrimary()">Set as Primary Image</mat-radio-button>
     </div>
     <div class="action">
       <mat-icon (click)="edit()">edit</mat-icon> Edit Image Title
     </div>
     <div class="action">
-      <mat-checkbox [value]="includeInPublicGallery" (change)="includeInGallery()"><span class="checkbox-label">Include in Public Gallery</span></mat-checkbox>
+      <mat-checkbox [checked]="commsSuitable" (change)="includeInGallery()"><span class="checkbox-label">Include in Public Gallery</span></mat-checkbox>
     </div>
   </div>
 </div>
