remove unused loop

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-panel.component.html
@@ -18,7 +18,7 @@
                 </mat-option>
             </mat-select>
         </div>
-        <div *ngFor="let item of imagesAndVideosStub">
+        <div>
           <lightgallery [settings]="settings" [onBeforeSlide]="onBeforeSlide" class="content-panel-stack">
             <a *ngFor="let item of imagesAndVideosStub"
                 [attr.data-src]="item.href"
