--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
@@ -147,8 +147,8 @@
       }
 
       &.active {
-        border: 2px solid #1A5A96;
-        color: #1A5A96;
+        border: 2px solid #003366;
+        color: #003366;
       }
 
       .icon {
