--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
@@ -164,8 +164,9 @@ section {
                 color: #aa0d0d;
 
                 &::before {
-                    background-color: #aa0d0d;
+                    background-color: #FF0000;
                     border-radius: 50%;
+                    border: 1px solid black;
                 }
             }
 
@@ -173,17 +174,19 @@ section {
                 color: #6c4a00;
 
                 &::before {
-                    background-color: #ffd966;
+                    background-color: #ffff00;
                     border-radius: 50%;
+                    border: 1px solid black;
                 }
             }
 
             &.green {
-                color: #6aa84f;
+                color: #207148 ;
 
                 &::before {
-                    background-color: #207148;
+                    background-color: #98E600;
                     border-radius: 50%;
+                    border: 1px solid black;
                 }
             }
 
@@ -191,8 +194,9 @@ section {
                 color: #5c6671;
 
                 &::before {
-                    background-color: #5c6671;
+                    background-color: #999999;
                     border-radius: 50%;
+                    border: 1px solid black;
                 }
             }
 
