--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.html
@@ -1,5 +1,5 @@
 <div class="top">
-  <a class="link" routerLink="../admin" ><< Go Back</a>
+  <a class="link" routerLink="../admin" ><mat-icon svgIcon="back-icon" style="height:15px"></mat-icon> Back to Dashboard</a>
   <div class="title">
     <div>
       <h1>Fire Number: <span *ngIf="currentAdminIncident">{{currentAdminIncident.incidentLabel}}</span><span [ngClass]="{'pub-chip': incident.publishedStatus.toLowerCase() === 'published', 'unpub-chip': incident.publishedStatus.toLowerCase() !== 'published'}">{{incident.publishedStatus}}</span></h1>
