--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
@@ -47,7 +47,7 @@
           margin-left: 250px;
           line-height: 20px;
           font-size: 10px;
-          color: #999999
+          color: #999999;
         }
       }
 
