Support upload/download thumbnails for attachments

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-panel.component.html
@@ -21,8 +21,8 @@
         <div>
           <lightgallery [settings]="settings" [onBeforeSlide]="onBeforeSlide" class="content-panel-stack">
             <a *ngFor="let item of imagesAndVideosStub"
-                [attr.data-src]="item.href"
-                [attr.data-responsive]="item.href"
+                [attr.data-src]="item.thumbnail"
+                [attr.data-responsive]="item.thumbnail"
                 data-lg-size="376-383"
                 class="gallery-item">
                 <div class="image-video-container">
