Updates for missing admin screen attributes

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.html
@@ -73,7 +73,7 @@
   <div class="content-panel">
     <h1>Response</h1>
     <div class="content-panel-body">
-      All resource information is estimated and is updated as frequently as possible, but may not accurately depict the resources deployed on an incident. The BC Wildfire Service relies on thousands of people each year to respond to wildfires. This includes fire fighters, air crews, equipment operators and support staff.
+      {{incident.resourceDetail || 'All resource information is estimated and is updated as frequently as possible, but may not accurately depict the resources deployed on an incident. The BC Wildfire Service relies on thousands of people each year to respond to wildfires. This includes fire fighters, air crews, equipment operators and support staff.'}}
     </div>
     <div class="learn-more-button-container">
       <a class="learn-more-button no-print" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-response" target="_blank" rel="noopener">Learn More</a>
