--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.html
@@ -27,6 +27,17 @@
       </div>
       <div>
         <!-- Image/video section: fetch from aws cache -->
+        <div style="text-align: center;" *ngIf="primaryMedia !== null">
+          <img *ngIf="primaryMedia.type === 'image'" style="max-width: 100%; height: auto; border-radius: 16px;" [alt]="primaryMedia.title" [src]="primaryMedia.thumbnail" width="1000" height="400"/>
+          <youtube-player *ngIf="primaryMedia.type === 'video'"
+            videoId={{convertToYoutubeId(primaryMedia.href)}}
+            suggestedQuality="highres"
+            [startSeconds]="1"
+            [endSeconds]="20"
+            [height]="250"
+            [width]="400">
+          </youtube-player>
+        </div>
         <!-- contact section-->
         <div class="content-panel-subtitle">Incident Contact Information</div>
         <div style="display: flex;"><mat-icon style="padding-right: 10px;">contact_mail</mat-icon><span>{{convertToFireCentreDescription(incident.contactOrgUnitIdentifer || incident.fireCentre)}}</span></div>
